--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "php": ">=5.4.16",
         "cakephp/cakephp": "~3.0",
         "mobiledetect/mobiledetectlib": "2.*",
-        "cakephp/migrations": "~1.0",
+        "cakephp/migrations": "@stable",
         "cakephp/plugin-installer": "*",
         "intervention/image": "^2.3@dev",
         "vmcms/akismet-php": "dev-master",
