--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "cakephp/plugin-installer": "*",
         "intervention/image": "^2.3@dev",
         "vmcms/akismet-php": "dev-master",
-        "emojione/emojione": "dev-master"
+        "emojione/emojione": "dev-master",
     },
     "require-dev": {
         "psy/psysh": "@stable",
