--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "vmcms/akismet-php": "dev-master",
         "emojione/emojione": "dev-master",
         "cakemanager/cakephp-notifier": "dev-master",
-        "cake17/cakephp-recaptcha": "dev-master"
+        "cake17/cakephp-recaptcha": "dev-master",
+        "kzykhys/ciconia": "~1.0.0",
+        "erusev/parsedown": "dev-master"
     },
     "require-dev": {
         "psy/psysh": "@stable",
