--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "gynidark/oranticket",
+    "name": "gynidark/Ticki",
     "description": "Créé des tickets afin de résoudre vos soucis/problèmes",
-    "homepage": "https://github.com/OranTicket",
+    "homepage": "https://github.com/Ticki",
     "type": "project",
     "version": "1.0",
     "license": "MIT",
